# SSL_Curator

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  bs_example.yaml  data.yaml  eval.yaml  quotas.yaml  scoring.yaml
configs/datasets/: TEMPLATE.yaml  urgent2026.yaml
configs/select/: cvar.yaml
configs/train/: bsrrn.yaml  flowse.yaml
data/: toy_manifest.csv
data/curated/: dryrun.csv  dryrun_meta.json
data/manifests/urgent2026/: train.jsonl
data/scores/: train_scores.parquet
datasets/: README.md  base.py  cli.py  registry.py  urgent2026.py  utils.py
datasets/cards/: README.md
docs/: CODEBASE_SPEC.md
eval/: eval.py  eval_report.md  tail_metrics.py
experiments/bsrrn_default/eval/: eval_config.yaml  plan.json
experiments/dev_flowse/: config.yaml
experiments/dryrun_test/: config.yaml
scoring/: __init__.py  mos_proxy.py  score.py  ssl_embed.py  utils.py
scoring/mos_backends/: __init__.py
scoring/proxies/: __init__.py
scoring/ssl_backends/: __init__.py
scripts/: build_librispeech_manifest.py  get_data.sh  prepare_manifests.sh  run_all.bat  run_all.sh  run_eval.sh  run_score.sh  run_select.sh  run_train.sh  run_train_flowse.sh
selector/: __init__.py  __main__.py  base.py  coverage_only.py  cvar.py  diversity.py  mos_threshold.py  quotas.py  registry.py  select.py  utils.py
tests/: test_cvar.py  test_diversity.py  test_quota_feasibility.py  test_reproducibility.py
tools/: hashing.py  manifest_utils.py  namegen.py
trainers/: __init__.py  bsrrn.py  flowse.py
