[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urgent2026"
version = "0.1.0"
description = "Coverage-constrained CVaR data curation pipeline for speech corpora"
readme = "README.md"
authors = [{ name = "URGENT 2026 Team", email = "team@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203", "E266", "E501", "B905"]